[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "roex-python"
version = "1.2.0"
description = "Pip package for the RoEx Tonn API"
authors = ["RoEx <info@roexaudio.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/roex-audio/roex-python"
homepage = "https://www.roexaudio.com"
keywords = ["audio", "mixing", "mastering", "enhancement", "api"]
classifiers=[
    "Development Status :: 4 - Beta",  # Or another status like 3 - Alpha, 5 - Production/Stable
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.25.0"
soundfile = ">=0.10.0"  # Added dependency for audio file handling in examples
tenacity = "^8.2.0"      # Added for retry logic

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.6b0"
isort = "^5.9.2"
mypy = "^0.910"
sphinx = "^7.0.0" # Added for documentation generation
sphinx-rtd-theme = "^2.0.0" # Added theme for Sphinx