[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roex_python"
version = "1.3.0"
description = "Pip package for the RoEx Tonn API"
readme = "README.md"
authors = [
    {name = "RoEx Audio", email = "support@roexaudio.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "requests-mock>=1.9.3",
]

[project.urls]
Homepage = "https://github.com/roexaudio/roex-python"
Documentation = "https://roex.stoplight.io/"
Repository = "https://github.com/roexaudio/roex-python"
"Bug Tracker" = "https://github.com/roexaudio/roex-python/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]
